wp-content/themes/gijc2015/style.css
/*
Theme Name:     GIJC - Largo 0.5
Theme URI:      http://largoproject.org
Description:    A child theme for the Global Investigative Journalism Conference based on the Project Largo parent theme.
Author:         The INN Nerds
Author URI:     http://nerds.inn.org
Template:       largo
Version:        0.2
*/

a { color: #2a819e; }
a:hover { color: #005b7f; }

.widgettitle,
.stories h3.widgettitle,
.tags ul li,
.btn-primary,
.sticky-related,
.sticky-solo,
.navbar-inner,
.navbar .btn-navbar {
  background-color: #005b7f;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}
#site-footer .widgettitle {
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
}
#site-header img,
#sidebar .widget,
#left-rail .widget {
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  border-radius: 8px;
}
.global-nav ul.lang-nav li {
  margin-right: 8px;
}
.lang-nav img {
  height: 24px;
}
.lang-nav a:hover img {
  opacity: 0.85;
}
.navbar .active > a,
.navbar .active > a:hover,
.navbar .open > a,
.navbar li > a:hover  {
  color: #eee;
  text-decoration: none;
  background-color: #003e67;
}
.navbar .divider-vertical {
  height: 28px;
  width: 1px;
  margin: 0 0 0 2px;
  overflow: hidden;
  background-color: #003e67;
  border-left: 1px solid #005b7f;
}
.sticky-related,
.sticky-solo {
  background-color: #005b7f;
  border: 1px solid #eee;
}
.tags ul li:hover,
.btn-primary:hover,
.pager a:hover,
#related-post-nav a:hover,
#related-post-nav a.selected {
  background-color: #005b7f;
}
#site-footer a,
#boilerplate a {
  color: #eee;
}
#boilerplate a:hover,
.donate-btn a:hover,
#site-footer a:hover,
#related-post-nav a:hover {
  color: #fff;
}
.view-cap,
.view-container-border {
  background-color: #fff;
}
.subscribe i.icon-mail {
  background-color: #333;
  padding-left: 4px;
}
.subscribe i.icon-mail:hover { background-color: #444; }
.donate-btn .icon-heart { display: none; }
#homepage-bottom {
  margin-top: 0;
}
#homepage-bottom .widgettitle {
  border: 0;
  text-align: center;
  font-size: 17px;
  margin-bottom: 0;
}
#homepage-bottom .widgettitle a {
  color: #333;
}
#homepage-bottom img {
  max-width: 100%;
  margin-bottom: 8px;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}
#homepage-bottom a:hover img {
  opacity: 0.9;
}
#homepage-bottom .widget p {
  padding: 0;
  font-size: 12px;
  margin-bottom: 0;
}
#homepage-bottom .widget {
  width: 26.5%;
  margin-left: 2% !important;
  margin-bottom: 18px;
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  border-radius: 8px;
  background-color: #e9ebf0;
}
.page-id-28 #homepage-bottom .widget {
  width: 26.5%;
}
#homepage-bottom .widget:hover {
  background-color: #88aec0;
}
#homepage-bottom .widget.even,
#homepage-bottom .widget.odd {
  float: left;
  clear: none;
}
#homepage-bottom .widget:nth-child(3n+1) {
  clear: both;
  margin-left: 0 !important;
}
#partners {
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  border-radius: 8px;
  max-width:96%;
  clear:both;
}
#partners img {
  max-width: 45%;
}
#partners .row {
  margin: 0 auto;
  text-align: center;
}
#sponsors {
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  border-radius: 8px;
  max-width:97.5%;
  clear: both;
}
#sponsors h4 {
  text-align: center;
  font-size: 24px;
  text-transform: uppercase;
  margin-bottom: 6px;
  margin-top: 24px;
  padding: 5px 0;
  border-top: 3px solid #333;
  border-bottom: 1px solid #333;
}
#sponsors .row {
  clear: both;
  text-align: center;
  margin: 12px auto;
}
#sponsors .row1 img,
#sponsors .row2 img,
#sponsors .row6 img  {
  margin: 10px 20px;
  /*border: 1px solid #ccc;*/
}
#sponsors .row2 img {
  max-width: 40%;
}
#sponsors .row2.lg img {
  max-width: 45%;
}
#sponsors .row9 img {
  margin: 0 10px 20px;
}
#page-id-140 p {
  display: block;
  width: 990px;

}
#sched-container {
  margin: 0 auto;
  width: 990px;
}
@media (min-width: 769px) and (max-width: 979px) {
  #homepage-bottom .widget {
  	width: 43% !important;
  	margin-left: 0 !important;
  }
  .page-id-28 #homepage-bottom .widget {
    width: 42.5%;
  }
  #homepage-bottom .widget:nth-child(odd) {
    clear: both;
  }
  #homepage-bottom .widget:nth-child(even) {
    clear: none;
    margin-left: 3% !important;
  }
  #sponsors .row9 img {
    max-width: 20%;
    width: 20%;
    margin: 0 2.5% 15px;
  }
}
@media (max-width: 768px) {
  #site-footer .widget,
  #site-footer .widget-area,
  #site-footer ul.menu {
    margin-bottom: 0;
  }
  #site-footer #nav_menu-3 {
    margin-bottom: 24px;
  }
  .navbar .container {
    width: auto;
    padding: 0;
  }
  ul.menu li:last-child { border-bottom: none !important; }
  #site-footer .widget-3 { border-bottom: 1px solid #555555; }
  ul#ft-social { margin-top: 24px; }
  #homepage-bottom .widget {
  	clear: both;
  	float: none;
  	width: 100%;
  	margin: 0 0 18px;
  }
  .page-id-28 #homepage-bottom .widget {
    width: 95%;
    margin: 0 0 10px !important;
  }
  #homepage-bottom .widget:nth-child(odd),
  .page-id-28 #homepage-bottom .widget:nth-child(odd) {
    clear: both;
  }
  #homepage-bottom .widget:nth-child(even),
  .page-id-28 #homepage-bottom .widget:nth-child(even) {
    clear: none;
    margin-left: 0 !important;
  }
  #sponsors .row9 img {
    max-width: 20%;
    width: 20%;
    margin: 0 2.5% 15px;
  }
  #sponsors .row1 img,
  #sponsors .row2 img {
    max-width: 95%;
    margin-bottom: 8px;
  }
  #sponsors .row.row1,
  #sponsors .row.row2 {
    margin-bottom: 0;
  }
  .global-nav ul {
    display: block;
  }
  .global-nav .nav-right {
    width: 50%;
  }
  .global-nav .nav-right .donate-btn {
    float: right;
    margin-left: 0;
  }
  .global-nav .nav-right .org-logo {
    float: left;
  }

}
@media (max-width: 480px) {
  #homepage-bottom {
    margin-top: 10px;
  }
  .page-id-28 #homepage-bottom .widget {
    width: 94%;
  }
  #sponsors .row {
    margin-top: 0;
    margin-bottom: 15px;
  }
  #sponsors .row .row9 {
  	margin-bottom: 0;
  }
  #sponsors .row9 img {
    max-width: 30%;
    width: 29%;
    margin: 0 2.5% 15px;
  }
}

